# Aurum

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/: CONTRIBUTING.md
.github/workflows/: c-cpp-build-windows.yaml
include/: basealg.h  ctexceptions.h  fcfs.h  ljt.h  lrjf.h  lrjt.h  mlfq.h  priority.h  process.h  program.h  ptable.h  queues.h  rr.h  schalg.h  scheduler.h  sjf.h  srjf.h
src/: ctexceptions.cpp  mainwindow.ui  process.cpp  program.cpp  queues.cpp  scheduler.cpp
src/algorithms/fcfs/: fcfs.cpp
src/algorithms/lrjf/: lrjf.cpp
src/algorithms/lrjt/: lrjt.cpp
src/algorithms/mlfq/: mlfq.cpp
src/algorithms/priority/: priority.cpp
src/algorithms/rr/: rr.cpp
src/algorithms/sjf/: sjf.cpp
src/algorithms/sjt/: ljt.cpp
src/algorithms/srjf/: srjf.cpp
src/algorithms/srjt/: srjt.cpp
src/main/: ctexceptions.cpp  process.cpp  program.cpp  ptable.cpp  queues.cpp  scheduler.cpp
src/ui/: processwindow.cpp  processwindow.h  processwindow.ui  queuewindow.cpp  queuewindow.h  queuewindow.ui  startwindow.cpp  startwindow.h  startwindow.ui
